# proyecto_1_CR_DJ_LC

./: README.md  pyproject.toml
Archivos/: README.md
Codigo/: Cuaderno_descarga.ipynb  Cuaderno_exploracion.ipynb
Datos/: Incidentes_santander.xlsx
